# tangaga

./: .gitignore  Anchor.toml  Day22学习指南—发行自己的SPL代币.md  package-lock.json  package.json
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1773856411445417  MANIFEST-000021
programs/tangaga/: Cargo.toml
programs/tangaga/src/: error.rs  lib.rs
programs/tangaga/src/instructions/: approve.rs  burn_token.rs  close_account.rs  create_token.rs  delegate_transfer.rs  mint_to_wallet.rs  mod.rs  revoke.rs  transfer_tokens.rs
tests/: tangaga.ts
